--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/StyleSheet1.css" />
     <title>Adjektiv-Historie</title>
 </head>
 <body>
-
     <div id="background-video">
-        <iframe style="width:100vw; height:100vh;" src="https://www.youtube.com/embed/UgHKb_7884o?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe style="width:100vw; height:100vh;" src="https://www.youtube.com/embed/UgHKb_7884o?autoplay=1&controls=0&showinfo=0&autohide=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
     </div>
+    <div id="wrapper">
+        <img id="bookClosed" onclick="showBook(this)" src="bilder/bookClosed.png"/>
+
     <script src="js/Script.js"></script>
 </body>
 </html>
+s
