--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/StyleSheet1.css" />
+    <link rel="icon" href="bilder/favicon.ico" sizes="any" type="image/svg+xml">
     <title>Adjektiv-Historie</title>
 </head>
 <body>
@@ -13,8 +14,7 @@
     </div>
     <div id="wrapper">
         <img id="bookClosed" onclick="showBook(this)" src="bilder/bookClosed.png"/>
-
+        
     <script src="js/Script.js"></script>
 </body>
 </html>
-s
