--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 
 </head>
 
-<body>
-    <div id="background-video">
-        <iframe style="width:100vw; height:100vh;" src="https://www.youtube.com/embed/UgHKb_7884o?autoplay=1&controls=0&showinfo=0&autohide=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <div id="wrapper"></div>
+<body onload="updateView()">
+    <div  id="wrapper"></div>
     <script src="js/Model.js"></script>
     <script src="js/View.js"></script>
     <script src="js/Controller.js"></script>
 </body>
 
-</html>
+</html>     
